# music-sentiment

./: .env.example  .gitignore  DEPLOY.md  README.md  bot.py  lastfm.py  pyproject.toml  sentiment.py  stats.py  users.py
.github/workflows/: weekly-lastfm.yml
legacy/: bot.py  list_members.py
music_sentiment/: __init__.py  dry_run.py  lastfm.py  stats.py  weekly_post.py
scripts/: dry_run.py  list_members.py  weekly_post.py
src/music_sentiment/: dry_run.py  sentiment.py  users.py  weekly_post.py
